# st7789-dev

./: Cargo.toml  flake.nix  readme.md
.github/workflows/: build.yml
include/: lv_conf.h
src/: actor.rs  data.rs  layout.rs  main.rs  types.rs
