[package]
name = "st7789-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.26"
cstr_core = "0.2.6"
display-interface-spi = "0.4.1"
embassy-executor = { version = "0.6.0", features = [
    "integrated-timers",
    "arch-std",
    "executor-thread",
    "log",
] }
embassy-time = { version = "0.3.2", features = ["log", "std"] }
embedded-graphics = "0.8.1"
lvgl = { version = "0.6.2", default-features = false, features = [
    "embedded_graphics",
    "unsafe_no_autoinit",
] }
mipidsi = "0.7.1"
rppal = { version = "0.19", features = ["hal"] }
spidev = "0.6.0"
static_cell = "2.1.0"
sysinfo = "0.29.8"
textwrap = "0.16.0"
log = "0.4.22"
env_logger = "0.11.5"

[patch.crates-io]
lvgl = { git = "https://github.com/lvgl/lv_binding_rust.git", rev = "45cafea" }

[dev-dependencies]
embedded-graphics-simulator = "0.7.0"
